fix: add spacing between nav menu and github icon (#17)
* fix: add spacing between nav menu and github icon

* refactor: replace .container styling with margin-top on div.social-links

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,7 @@
 @import './rspress.css';
 @import './normalize.css';
 
-:root{
+:root {
   --rp-home-hero-name-color: #222;
   --rp-c-text-2: #333;
 }
@@ -13,4 +13,8 @@
 
 .button_72e53.brand_72e53 {
   background: #2272eb;
+}
+
+div.social-links {
+  margin-top: 0.75rem;
 }
